data/derived/sp14/progs/unify/prog3462.ml.out
Characters 73-75:
  | 2 -> 22
         ^^
Error: This expression has type int but an expression was expected of type
         expr
